--- a/AndroidOnTheWay/res/values/styles.xml
+++ b/AndroidOnTheWay/res/values/styles.xml
@@ -32,4 +32,18 @@
             <item name="android:thumbTextPadding">30dp</item>
             
     </style>
+    
+	<style name="StyleTitleText">
+		<item name="android:paddingTop">4dp</item>
+		<item name="android:paddingBottom">2dp</item>
+		<item name="android:textColor">#444444</item>
+		<item name="android:textSize">16sp</item>
+	</style>
+
+	<style name="SwitchButtonStyle">
+		<item name="android:paddingLeft">10dp</item>
+		<item name="android:paddingRight">10dp</item>
+		<item name="android:paddingTop">4dp</item>
+		<item name="android:paddingBottom">4dp</item>
+	</style>
 </resources>
