--- a/AndroidOnTheWay/res/layout/custom_switch_activity.xml
+++ b/AndroidOnTheWay/res/layout/custom_switch_activity.xml
@@ -146,11 +146,11 @@
 
         </TableLayout>
 
-        <!--<TextView
+        <TextView
             style="@style/StyleTitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/style_tint_color"/>
+            android:text="@string/custom_switch_style_tint_color"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -187,7 +187,7 @@
             style="@style/StyleTitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/style_md_ios"/>
+            android:text="@string/custom_switch_style_md_ios"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -220,7 +220,7 @@
             style="@style/StyleTitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/style_disable"/>
+            android:text="@string/custom_switch_style_disable"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -247,15 +247,15 @@
             style="@style/StyleTitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/style_disable_opt"/>
+            android:text="@string/custom_switch_style_click"/>
 
         <com.demo.androidontheway.customswitch.SwitchButton
-            android:id="@+id/sb_disable_control"
+            android:id="@+id/sb_onclick_toast"
             style="@style/SwitchButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            /> -->
+            />
 
     </LinearLayout>
 </ScrollView>
