--- a/AndroidOnTheWay/res/values/styles.xml
+++ b/AndroidOnTheWay/res/values/styles.xml
@@ -46,4 +46,11 @@
 		<item name="android:paddingTop">4dp</item>
 		<item name="android:paddingBottom">4dp</item>
 	</style>
+
+	<style name="SwitchButtonStyleMD">
+		<item name="android:paddingLeft">10dp</item>
+		<item name="android:paddingRight">10dp</item>
+		<item name="android:paddingTop">4dp</item>
+		<item name="android:paddingBottom">4dp</item>
+	</style>
 </resources>
