--- a/AndroidOnTheWay/res/values/color.xml
+++ b/AndroidOnTheWay/res/values/color.xml
@@ -6,4 +6,14 @@
     <color name="content_color">#000000</color>
     <color name="selector_background">#DAA520</color>
     <color name="button_clicked_background">#8B0000</color>
+    
+    <color name="ksw_md_ripple_normal">#1E000000</color>
+	<color name="ksw_md_ripple_checked">#33019285</color>
+
+	<color name="ksw_md_solid_shadow">#33000000</color>
+
+	<color name="ksw_md_solid_normal">#ECECEC</color>
+	<color name="ksw_md_solid_checked">#019285</color>
+	<color name="ksw_md_solid_disable">#FFFFFF</color>
+	<color name="ksw_md_solid_checked_disable">#aaaaaa</color>
 </resources>
